added install node_modules in yaml

--- a/.github/workflows/surge_deploy.yml
+++ b/.github/workflows/surge_deploy.yml
@@ -27,6 +27,9 @@ jobs:
       with:
         node-version: 12
     
+    -name: Install node_modules
+      run: npm install
+      
     - name: Make Production Build
       run: npm run build
        
